// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InputTable > snapshot > should render empty input table 1`] = `
<DocumentFragment>
  <form>
    <table
      class="bg-white mx-auto"
    >
      <thead>
        <tr />
      </thead>
      <tbody />
    </table>
    <button
      class="fs-3 bg-default rounded p-4 ms-5 mb-5 position-fixed bottom-0 start-0 button-hover"
      type="button"
    >
      <span
        class="ps-3"
      >
        הוסף שורה בטבלה
      </span>
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-user-plus "
        color="white"
        data-icon="user-plus"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 640 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M96 128a128 128 0 1 1 256 0A128 128 0 1 1 96 128zM0 482.3C0 383.8 79.8 304 178.3 304h91.4C368.2 304 448 383.8 448 482.3c0 16.4-13.3 29.7-29.7 29.7H29.7C13.3 512 0 498.7 0 482.3zM504 312V248H440c-13.3 0-24-10.7-24-24s10.7-24 24-24h64V136c0-13.3 10.7-24 24-24s24 10.7 24 24v64h64c13.3 0 24 10.7 24 24s-10.7 24-24 24H552v64c0 13.3-10.7 24-24 24s-24-10.7-24-24z"
          fill="currentColor"
        />
      </svg>
    </button>
    <h1
      class="mt-5 pt-4 fw-light"
    />
  </form>
</DocumentFragment>
`;

exports[`InputTable > snapshot > should render input table with custom submit text 1`] = `
<DocumentFragment>
  <form>
    <table
      class="bg-white mx-auto"
    >
      <thead>
        <tr>
          <th />
          <th
            class="fs-5 p-3"
          >
            name
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td
            class="fs-4 fw-bold ps-3"
          >
            1
          </td>
          <td
            class="align-middle"
          >
            <input
              class="form-text-input p-1 m-1 text-center"
              name="submitText.0.name"
              style="max-width: 130px;"
              title="name"
              type="text"
            />
          </td>
          <td>
            <button
              class="me-2 bg-white text-danger rounded fs-5 border border-3 border-danger button-hover"
              type="button"
            >
              <span
                class="ps-2"
              >
                הסר
              </span>
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-circle-minus "
                color="red"
                data-icon="circle-minus"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M256 512c141.4 0 256-114.6 256-256S397.4 0 256 0S0 114.6 0 256S114.6 512 256 512zM184 232H328c13.3 0 24 10.7 24 24s-10.7 24-24 24H184c-13.3 0-24-10.7-24-24s10.7-24 24-24z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </td>
        </tr>
      </tbody>
    </table>
    <button
      class="fs-3 bg-default rounded p-4 ms-5 mb-5 position-fixed bottom-0 start-0 button-hover"
      type="button"
    >
      <span
        class="ps-3"
      >
        הוסף שורה בטבלה
      </span>
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-user-plus "
        color="white"
        data-icon="user-plus"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 640 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M96 128a128 128 0 1 1 256 0A128 128 0 1 1 96 128zM0 482.3C0 383.8 79.8 304 178.3 304h91.4C368.2 304 448 383.8 448 482.3c0 16.4-13.3 29.7-29.7 29.7H29.7C13.3 512 0 498.7 0 482.3zM504 312V248H440c-13.3 0-24-10.7-24-24s10.7-24 24-24h64V136c0-13.3 10.7-24 24-24s24 10.7 24 24v64h64c13.3 0 24 10.7 24 24s-10.7 24-24 24H552v64c0 13.3-10.7 24-24 24s-24-10.7-24-24z"
          fill="currentColor"
        />
      </svg>
    </button>
    <button
      class="fs-3 bg-default rounded m-4 py-3 px-4 button-border-focus"
      type="submit"
    >
      Submit Form
    </button>
  </form>
</DocumentFragment>
`;

exports[`InputTable > snapshot > should render input table with custom text when no table has no values 1`] = `
<DocumentFragment>
  <form>
    <table
      class="bg-white mx-auto"
    >
      <thead>
        <tr />
      </thead>
      <tbody />
    </table>
    <button
      class="fs-3 bg-default rounded p-4 ms-5 mb-5 position-fixed bottom-0 start-0 button-hover"
      type="button"
    >
      <span
        class="ps-3"
      >
        הוסף שורה בטבלה
      </span>
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-user-plus "
        color="white"
        data-icon="user-plus"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 640 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M96 128a128 128 0 1 1 256 0A128 128 0 1 1 96 128zM0 482.3C0 383.8 79.8 304 178.3 304h91.4C368.2 304 448 383.8 448 482.3c0 16.4-13.3 29.7-29.7 29.7H29.7C13.3 512 0 498.7 0 482.3zM504 312V248H440c-13.3 0-24-10.7-24-24s10.7-24 24-24h64V136c0-13.3 10.7-24 24-24s24 10.7 24 24v64h64c13.3 0 24 10.7 24 24s-10.7 24-24 24H552v64c0 13.3-10.7 24-24 24s-24-10.7-24-24z"
          fill="currentColor"
        />
      </svg>
    </button>
    <h1
      class="mt-5 pt-4 fw-light"
    >
      This text should show up when table has no values
    </h1>
  </form>
</DocumentFragment>
`;

exports[`InputTable > snapshot > should render input table with one column 1`] = `
<DocumentFragment>
  <form>
    <table
      class="bg-white mx-auto"
    >
      <thead>
        <tr />
      </thead>
      <tbody />
    </table>
    <button
      class="fs-3 bg-default rounded p-4 ms-5 mb-5 position-fixed bottom-0 start-0 button-hover"
      type="button"
    >
      <span
        class="ps-3"
      >
        הוסף שורה בטבלה
      </span>
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-user-plus "
        color="white"
        data-icon="user-plus"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 640 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M96 128a128 128 0 1 1 256 0A128 128 0 1 1 96 128zM0 482.3C0 383.8 79.8 304 178.3 304h91.4C368.2 304 448 383.8 448 482.3c0 16.4-13.3 29.7-29.7 29.7H29.7C13.3 512 0 498.7 0 482.3zM504 312V248H440c-13.3 0-24-10.7-24-24s10.7-24 24-24h64V136c0-13.3 10.7-24 24-24s24 10.7 24 24v64h64c13.3 0 24 10.7 24 24s-10.7 24-24 24H552v64c0 13.3-10.7 24-24 24s-24-10.7-24-24z"
          fill="currentColor"
        />
      </svg>
    </button>
    <h1
      class="mt-5 pt-4 fw-light"
    />
  </form>
</DocumentFragment>
`;

exports[`InputTable > snapshot > should render input table with one column and one row 1`] = `
<DocumentFragment>
  <form>
    <table
      class="bg-white mx-auto"
    >
      <thead>
        <tr>
          <th />
          <th
            class="fs-5 p-3"
          >
            name
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td
            class="fs-4 fw-bold ps-3"
          >
            1
          </td>
          <td
            class="align-middle"
          >
            <input
              class="form-text-input p-1 m-1 text-center"
              name="oneColOneRow.0.name"
              style="max-width: 130px;"
              title="name"
              type="text"
            />
          </td>
          <td>
            <button
              class="me-2 bg-white text-danger rounded fs-5 border border-3 border-danger button-hover"
              type="button"
            >
              <span
                class="ps-2"
              >
                הסר
              </span>
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-circle-minus "
                color="red"
                data-icon="circle-minus"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M256 512c141.4 0 256-114.6 256-256S397.4 0 256 0S0 114.6 0 256S114.6 512 256 512zM184 232H328c13.3 0 24 10.7 24 24s-10.7 24-24 24H184c-13.3 0-24-10.7-24-24s10.7-24 24-24z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </td>
        </tr>
      </tbody>
    </table>
    <button
      class="fs-3 bg-default rounded p-4 ms-5 mb-5 position-fixed bottom-0 start-0 button-hover"
      type="button"
    >
      <span
        class="ps-3"
      >
        הוסף שורה בטבלה
      </span>
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-user-plus "
        color="white"
        data-icon="user-plus"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 640 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M96 128a128 128 0 1 1 256 0A128 128 0 1 1 96 128zM0 482.3C0 383.8 79.8 304 178.3 304h91.4C368.2 304 448 383.8 448 482.3c0 16.4-13.3 29.7-29.7 29.7H29.7C13.3 512 0 498.7 0 482.3zM504 312V248H440c-13.3 0-24-10.7-24-24s10.7-24 24-24h64V136c0-13.3 10.7-24 24-24s24 10.7 24 24v64h64c13.3 0 24 10.7 24 24s-10.7 24-24 24H552v64c0 13.3-10.7 24-24 24s-24-10.7-24-24z"
          fill="currentColor"
        />
      </svg>
    </button>
    <button
      class="fs-3 bg-default rounded m-4 py-3 px-4 button-border-focus"
      type="submit"
    />
  </form>
</DocumentFragment>
`;

exports[`InputTable > snapshot > should render input table with two columns and three rows 1`] = `
<DocumentFragment>
  <form>
    <table
      class="bg-white mx-auto"
    >
      <thead>
        <tr>
          <th />
          <th
            class="fs-5 p-3"
          >
            name
          </th>
          <th
            class="fs-5 p-3"
          >
            value
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td
            class="fs-4 fw-bold ps-3"
          >
            1
          </td>
          <td
            class="align-middle"
          >
            <input
              class="form-text-input p-1 m-1 text-center"
              name="twoColsThreeRows.0.name"
              style="max-width: 130px;"
              title="name"
              type="text"
            />
          </td>
          <td
            class="align-middle"
          >
            <input
              class="form-text-input p-1 m-1 text-center"
              name="twoColsThreeRows.0.value"
              style="max-width: 130px;"
              title="value"
              type="text"
            />
          </td>
          <td>
            <button
              class="me-2 bg-white text-danger rounded fs-5 border border-3 border-danger button-hover"
              type="button"
            >
              <span
                class="ps-2"
              >
                הסר
              </span>
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-circle-minus "
                color="red"
                data-icon="circle-minus"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M256 512c141.4 0 256-114.6 256-256S397.4 0 256 0S0 114.6 0 256S114.6 512 256 512zM184 232H328c13.3 0 24 10.7 24 24s-10.7 24-24 24H184c-13.3 0-24-10.7-24-24s10.7-24 24-24z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </td>
        </tr>
        <tr>
          <td
            class="fs-4 fw-bold ps-3"
          >
            2
          </td>
          <td
            class="align-middle"
          >
            <input
              class="form-text-input p-1 m-1 text-center"
              name="twoColsThreeRows.1.name"
              style="max-width: 130px;"
              title="name"
              type="text"
            />
          </td>
          <td
            class="align-middle"
          >
            <input
              class="form-text-input p-1 m-1 text-center"
              name="twoColsThreeRows.1.value"
              style="max-width: 130px;"
              title="value"
              type="text"
            />
          </td>
          <td>
            <button
              class="me-2 bg-white text-danger rounded fs-5 border border-3 border-danger button-hover"
              type="button"
            >
              <span
                class="ps-2"
              >
                הסר
              </span>
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-circle-minus "
                color="red"
                data-icon="circle-minus"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M256 512c141.4 0 256-114.6 256-256S397.4 0 256 0S0 114.6 0 256S114.6 512 256 512zM184 232H328c13.3 0 24 10.7 24 24s-10.7 24-24 24H184c-13.3 0-24-10.7-24-24s10.7-24 24-24z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </td>
        </tr>
        <tr>
          <td
            class="fs-4 fw-bold ps-3"
          >
            3
          </td>
          <td
            class="align-middle"
          >
            <input
              class="form-text-input p-1 m-1 text-center"
              name="twoColsThreeRows.2.name"
              style="max-width: 130px;"
              title="name"
              type="text"
            />
          </td>
          <td
            class="align-middle"
          >
            <input
              class="form-text-input p-1 m-1 text-center"
              name="twoColsThreeRows.2.value"
              style="max-width: 130px;"
              title="value"
              type="text"
            />
          </td>
          <td>
            <button
              class="me-2 bg-white text-danger rounded fs-5 border border-3 border-danger button-hover"
              type="button"
            >
              <span
                class="ps-2"
              >
                הסר
              </span>
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-circle-minus "
                color="red"
                data-icon="circle-minus"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M256 512c141.4 0 256-114.6 256-256S397.4 0 256 0S0 114.6 0 256S114.6 512 256 512zM184 232H328c13.3 0 24 10.7 24 24s-10.7 24-24 24H184c-13.3 0-24-10.7-24-24s10.7-24 24-24z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </td>
        </tr>
      </tbody>
    </table>
    <button
      class="fs-3 bg-default rounded p-4 ms-5 mb-5 position-fixed bottom-0 start-0 button-hover"
      type="button"
    >
      <span
        class="ps-3"
      >
        הוסף שורה בטבלה
      </span>
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-user-plus "
        color="white"
        data-icon="user-plus"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 640 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M96 128a128 128 0 1 1 256 0A128 128 0 1 1 96 128zM0 482.3C0 383.8 79.8 304 178.3 304h91.4C368.2 304 448 383.8 448 482.3c0 16.4-13.3 29.7-29.7 29.7H29.7C13.3 512 0 498.7 0 482.3zM504 312V248H440c-13.3 0-24-10.7-24-24s10.7-24 24-24h64V136c0-13.3 10.7-24 24-24s24 10.7 24 24v64h64c13.3 0 24 10.7 24 24s-10.7 24-24 24H552v64c0 13.3-10.7 24-24 24s-24-10.7-24-24z"
          fill="currentColor"
        />
      </svg>
    </button>
    <button
      class="fs-3 bg-default rounded m-4 py-3 px-4 button-border-focus"
      type="submit"
    />
  </form>
</DocumentFragment>
`;
